--- a/index.html
+++ b/index.html
@@ -1,29 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <title>Página Hola Mundo </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Incluye la hoja de estilos de Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta charset="UTF-8">
+  <title>Hola Mapa - Leaflet</title>
   <style>
-	#map {
-           width: 800px;
-           heigth:500px;
-	}
+  body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  height: 600px;
+  width: 100%;
+}
+
   </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
-   <h1>Hola mapa</h1>
-<div id="map"></div>
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script>
-   var map = L.map('map').setView([19.4326, -99.133], 13]);
+  <h1>Mi primer mapa con Leaflet</h1>
+  <div id="map"></div>
 
-   // Agrega la capa de mapa base de OpenStreetMap
-	L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-	attribution: '© OpenStreetMap contributors' // Muestra el crédito obligatorio
-	}).addTo(map);
-</script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script>
+  // Crear el mapa
+var map = L.map('map').setView([19.4326, -99.1332], 13); // CDMX
+
+// Cargar capa base
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  attribution: '© OpenStreetMap contributors'
+}).addTo(map);
+
+// Agregar marcadores
+var lugares = [
+  { nombre: "Lugar 1", coords: [19.4326, -99.1332] },
+  { nombre: "Lugar 2", coords: [19.4376, -99.1400] },
+  { nombre: "Lugar 3", coords: [19.4280, -99.1200] },
+  { nombre: "Lugar 4", coords: [19.4200, -99.1300] },
+  { nombre: "Lugar 5", coords: [19.4400, -99.1350] }
+];
+
+lugares.forEach(function(lugar) {
+  L.marker(lugar.coords).addTo(map).bindPopup(lugar.nombre);
+});
+
+// Cargar GeoJSON
+fetch('datos.geojson')
+  .then(response => response.json())
+  .then(data => {
+    L.geoJSON(data).addTo(map);
+  });
+
+  </script>
+
+  <script>
+  // GeoJSON embebido directamente
+  var geojsonData = {
+  "type": "FeatureCollection",
+  "features": [
+    {
+      "type": "Feature",
+      "properties": { "nombre": "Zona de interés" },
+      "geometry": {
+        "type": "Polygon",
+        "coordinates": [[
+          [-99.1400, 19.4300],
+          [-99.1300, 19.4300],
+          [-99.1300, 19.4400],
+          [-99.1400, 19.4400],
+          [-99.1400, 19.4300]
+        ]]
+      }
+    }
+  ]
+}
+;
+  L.geoJSON(geojsonData).addTo(map);
+  </script>
 </body>
 </html>
