--- a/index.html
+++ b/index.html
@@ -80,4 +80,84 @@ fetch('datos.geojson')
   </script>
 </body>
 </html>
+// Agregar marcador para Coyoacán
+L.marker([19.3467, -99.1617]).addTo(map)
+    .bindPopup('Coyoacán');
 
+// Definir capa vacía para alcaldías
+var alcaldiasLayer = L.geoJSON(null, {
+    style: {
+        color: 'blue',
+        weight: 2,
+        fillOpacity: 0.1
+    },
+    onEachFeature: function (feature, layer) {
+        if (feature.properties && feature.properties.NOMGEO) {
+            layer.bindPopup('Alcaldía: ' + feature.properties.NOMGEO);
+        }
+    }
+});
+
+// Cargar archivo GeoJSON y agregarlo a la capa
+fetch('alcaldias.geojson')
+    .then(response => response.json())
+    .then(data => {
+        alcaldiasLayer.addData(data);
+    });
+
+// Agregar control de capas
+var overlayMaps = {
+    "Alcaldías CDMX": alcaldiasLayer
+};
+L.control.layers(null, overlayMaps).addTo(map);
+
+<!-- Código adicional de la imagen 2 -->
+<body>
+  <!-- Titulo principal -->
+  <h1>Hola mapa</h1>
+
+  <!-- Contenedor donde se renderizara el mapa -->
+  <div id="map"></div>
+
+  <!-- Incluye la libreria de Leaflet -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script>
+    // Inicializa el mapa en el div 'map' con un centro en las coordenadas de la CDMX y un zoom de 13
+    var map = L.map('map').setView([19.4326, -99.1332], 13);
+
+    // Agrega una capa de mapa base de OpenStreetMap
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '© OpenStreetMap contributors' // Muestra el credito obligatorio
+    }).addTo(map);
+
+    // Agrega un marcador en el centro de la CDMX con un popup abierto por defecto
+    L.marker([19.4326, -99.1332]).addTo(map)
+      .bindPopup('Centro de la CDMX')
+      .openPopup();
+
+    // Segundo marcador: Coyoacan
+    L.marker([19.3467, -99.1617]).addTo(map)
+      .bindPopup('Coyoacan');
+
+    // Define la capa vacia para las alcaldias
+    var alcaldiasLayer = L.geoJSON(null, {
+      style: {
+        color: 'blue',
+        weight: 2,
+        fillOpacity: 0.1
+      },
+      onEachFeature: function (feature, layer) {
+        if (feature.properties && feature.properties.NOMGEO) {
+          layer.bindPopup('Alcaldia: ' + feature.properties.NOMGEO);
+        }
+      }
+    }).addTo(map);
+
+    // Cargar el archivo GeoJSON (debe estar en la misma carpeta o cambiar la ruta)
+    fetch('alcaldias.geojson')
+      .then(response => response.json())
+      .then(data => {
+        alcaldiasLayer.addData(data);
+      });
+  </script>
+</body>
